Fix javafx missing? and number field